utility_cluster_yml/ingress.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-jenkinsapp1
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: jenkins1
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /   
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    # External DNS - For creating a Record Set in Route53 to change this you need to change frontend route to same
    external-dns.alpha.kubernetes.io/hostname: jenkins.mycloudprojects.uk, sonar.mycloudprojects.uk, grafana.mycloudprojects.uk, prome.mycloudprojects.uk, app.mycloudprojects.uk
spec:
  ingressClassName: my-aws-ingress-class-dev # Ingress Class
  rules:
  - host: jenkins.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  - host: sonar.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: utility-cluster-sonarqube-dev-sonarqube
            port:
              number: 9000
  - host: grafana.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-dev-grafana
            port:
              number: 80
  - host: prome.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-dev-prometheus
            port:
              number: 9090
  - host: app.mycloudprojects.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-backend
            port:
              number: 80
      
# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
